pops-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-site-deployment
  labels:
    app: hugo-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hugo-site
  template:
    metadata:
      labels:
        app: hugo-site
    spec:
      containers:
      - name: hugo-site
        image: localhost/popsblog:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
