pops-blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-site-service
  labels:
    app: hugo-site
spec:
  type: ClusterIP
  selector:
    app: hugo-site
  ports:
    - port: 80
      targetPort: 80
