pops-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s.pops.cafe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hugo-site-service
                port:
                  number: 80
